error pay order

--- a/src/app/menu/footer/footer.component.html
+++ b/src/app/menu/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<div class="footer">
+  <div style="text-align: center; font-weight: bolder;">
+    <p>Copyright © 2021 TripCheap | Powered by TripCheap</p>
+  </div>
+</div>
