--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,41 @@ p {
 li {
     list-style-type: none;
 }
+
+#list-city .owl-nav > button{
+  position: absolute;
+  bottom: 100px;
+  width: 100%;
+  background-color: white;
+  width: 44px;
+  height: 44px;
+  z-index: 400;
+  box-shadow: 0 0 20px #e2e1e1;
+  border-radius: 50% !important;
+}
+
+
+.owl-nav .owl-prev {
+  left: 0;
+  /* font-weight: bolder; */
+  /* font-size: 25px; */
+}
+
+.owl-nav .owl-prev:hover {
+  /* color: black !important; */
+  background-color: cadetblue !important;
+}
+.owl-nav .owl-next:hover {
+  /* color: black !important; */
+  background-color: cadetblue !important;
+}
+
+.owl-nav .owl-next {
+  right: 0;
+
+  /* font-size: 25px; */
+}
+
+.owl-nav span {
+  font-weight: bolder;
+}
