--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -2,20 +2,20 @@
   <mat-card>
     <h1 class="logo_detail" style="color: rgb(153, 44, 255);">
       <span style="color: rgb(102, 160, 247);">Trip</span>Cheap
-      <span style="color: rgb(0, 0, 0); font-size: 16px;">/Sign up</span>
+      <span style="color: rgb(0, 0, 0); font-size: 16px;">/Đăng ký</span>
     </h1>
     <form (submit)='onSignUp(loginForm)' #loginForm = 'ngForm'>
         <mat-form-field class="form_field">
-            <mat-label>Username</mat-label>
+            <mat-label>Tên người dùng</mat-label>
             <input
               matInput
               type="text"
               name = "username"
               ngModel
               #usernameInput = 'ngModel'
-              placeholder="Username"
+              placeholder="Tên người dùng"
               required>
-            <mat-error *ngIf="usernameInput.invalid">Please enter username.</mat-error>
+            <mat-error *ngIf="usernameInput.invalid">Vui lòng nhập tên của bạn.</mat-error>
         </mat-form-field>
 
         <mat-form-field class="form_field">
@@ -26,41 +26,41 @@
             name = "email"
             ngModel
             #emailInput = 'ngModel'
-            placeholder="Ex. pat@example.com"
+            placeholder="Ex. example@gmail.com"
             required email>
-            <mat-error *ngIf="emailInput.invalid">Please enter a valid email.</mat-error>
+            <mat-error *ngIf="emailInput.invalid">Vui lòng nhập địa chỉ email.</mat-error>
         </mat-form-field>
 
         <mat-form-field class="form_field">
-            <mat-label>Password</mat-label>
+            <mat-label>Mật khẩu</mat-label>
             <input
             matInput
             type="password"
             name = "password"
             ngModel
             #passwordInput = 'ngModel'
-            placeholder="Password"
+            placeholder="Mật khẩu"
             required>
-            <mat-error *ngIf="passwordInput.invalid">Please enter a valid password.</mat-error>
+            <mat-error *ngIf="passwordInput.invalid">Vui lòng nhập mật khẩu.</mat-error>
         </mat-form-field>
 
         <mat-form-field class="form_field">
-            <mat-label>Re-enter password</mat-label>
+            <mat-label>Nhập lại mật khẩu</mat-label>
             <input
             matInput
             type="password"
             name = "re-password"
             ngModel
             #repasswordInput = 'ngModel'
-            placeholder="re-password"
+            placeholder="Nhập lại mật khẩu"
             required>
-            <mat-error *ngIf="repasswordInput.invalid">Please re-enter a valid password.</mat-error>
+            <mat-error *ngIf="repasswordInput.invalid">Vui lòng nhập lại mật khẩu.</mat-error>
         </mat-form-field>
 
-        <button type="submit" mat-raised-button color="primary" style="width: 100%;  margin-top: 2rem;">Signup</button>
+        <button type="submit" mat-raised-button color="primary" style="width: 100%;  margin-top: 2rem;">Đăng ký</button>
     </form>
     <div style="text-align: center; padding-top: 1rem;">
-      <span>If you have account, </span> <a mat-button href="/login" routerLinkActive="mat-primary">Login</a>
+      <span>Nếu bạn đã có tài khoản, </span> <a mat-button href="/login" routerLinkActive="mat-primary">Đăng nhập</a>
     </div>
   </mat-card>
 
