--- a/src/app/menu/header/header.component.html
+++ b/src/app/menu/header/header.component.html
@@ -77,7 +77,7 @@
       mat-button
       routerLink = "/login"
       routerLinkActive = "mat-primary">
-      <span>Login</span>
+      <span>Đăng nhập</span>
       </button>
 	  </li>
   </ul>
@@ -87,4 +87,7 @@
   <router-outlet></router-outlet>
 </div>
 
+<div class="footer" style="padding-top: 11rem;">
+  <app-footer></app-footer>
+</div>
 </mat-sidenav-container>
