--- a/src/app/tickets/ticket-detail/ticket-detail.component.css
+++ b/src/app/tickets/ticket-detail/ticket-detail.component.css
@@ -1,7 +1,7 @@
 .icon_condition {
   padding: 0.5rem 2rem;
   border-radius: 5rem;
-  background-color: rgb(255, 240, 246);
+  /* background-color: rgb(255, 240, 246); */
   margin: 0.5rem;
 }
 
