--- a/src/app/tickets/ticket-detail/ticket-detail.component.html
+++ b/src/app/tickets/ticket-detail/ticket-detail.component.html
@@ -1,5 +1,5 @@
 <mat-card  *ngIf="ticket">
-  <div style="width: 100%; height: auto; text-align:center;margin:0; padding:0;">
+  <div style="width: 100%; height: auto; text-align:center; margin:0; padding:0;">
     <ng-image-slider #nav
       [images]="imageObject"
       [infinite]="false"
@@ -7,34 +7,36 @@
       [imageSize]="{width: '100%', height: 450}"
       slideImage="1"></ng-image-slider>
   </div>
+
   <div class="detail">
-  <p>{{ticket.city + " > " + ticket.category + " > " + ticket.categoryService}}</p>
+    <p>{{ticket.city + " > " + ticket.category + " > " + ticket.categoryService}}</p>
   </div>
+
   <div class="title_ticket">
     <h1>{{ticket.title || ''}}</h1>
     <mat-divider></mat-divider>
 
     <div style="display: flex; flex-wrap: wrap; padding: 0.5rem 0;">
-      <div class="icon_condition">
+      <mat-chip class="icon_condition">
         <img src = "../../../assets/icon/dollar.svg" width="20px" height="20px">
         Không hoàn huỷ/Hoàn huỷ miễn phí trong 24h
-      </div>
-      <div class="icon_condition">
+      </mat-chip>
+      <mat-chip class="icon_condition">
         <img src = "../../../assets/icon/day.svg" width="20px" height="20px">
         Vé theo ngày cố định
-      </div>
-      <div class="icon_condition">
+      </mat-chip>
+      <mat-chip class="icon_condition">
         <img src = "../../../assets/icon/printer.svg" width="20px" height="20px">
         Xuất trình vé điện tử hoặc in voucher
-      </div>
-      <div class="icon_condition">
+      </mat-chip>
+      <mat-chip class="icon_condition">
         <img src = "../../../assets/icon/coupon.svg" width="20px" height="20px">
         Vào cổng bằng voucher/Đổi vé cứng
-      </div>
-      <div class="icon_condition">
+      </mat-chip>
+      <mat-chip class="icon_condition">
         <img src = "../../../assets/icon/car.svg" width="20px" height="20px">
         Đón tại điểm hẹn
-      </div>
+      </mat-chip>
     </div>
   </div>
   <mat-divider></mat-divider>
@@ -51,7 +53,7 @@
         <button
           class="button_select"
           mat-stroked-button
-          *ngFor="let item of ticket.services[0]; index as i"
+          *ngFor="let item of ticket.services; index as i"
           (click) = "showInfoService(i)"
           style="margin: 5px;">
            {{item.name}} </button>
@@ -63,16 +65,18 @@
           <mat-card *ngFor="let item of listItemService; index as i">
             <tr>
               <td style="width: 50%;">{{item.itemServiceName}}</td>
-              <td style="width: 10%;">{{formatPrice(item.itemServicePrice) + 'đ'}}</td>
+              <td style="width: 10%; padding-right: 0.5rem;">
+                {{item.itemServicePrice.toLocaleString('en-us', {minimumFractionDigits: 0})}}đ</td>
               <td>
                 <button
                 mat-raised-button
                 (click)="item.quantity=item.quantity+1"><mat-icon>add</mat-icon></button>
               </td>
               <td>
-                <mat-form-field appearance="outline">
                   <input
-                    style="width: 10px;"
+                    style="text-align: center;
+                    width: 40px;
+                    font-weight: bolder;"
                     formControlName = "quantity"
                     matInput
                     #incrementInput
@@ -80,11 +84,13 @@
                     min="0"
                     [value]="item.quantity"
                     placeholder="0">
-                </mat-form-field>
               </td>
-              <td><button
-                mat-raised-button
-                (click)="item.quantity=item.quantity-1"><mat-icon>remove</mat-icon></button></td>
+              <td>
+                <button
+                  mat-raised-button
+                  (click)="item.quantity=item.quantity-1"><mat-icon>remove</mat-icon>
+                </button>
+              </td>
             </tr>
           </mat-card>
 
@@ -131,25 +137,25 @@
         <div>
           <h4>Bao gồm:</h4>
           <ul>
-            <li *ngFor="let item of ticket.services[0][index].included">{{item}}</li>
+            <li *ngFor="let item of ticket.services[index].included">{{item}}</li>
           </ul>
         </div>
         <div>
           <h4>Không bao gồm:</h4>
           <ul>
-            <li *ngFor="let item of ticket.services[0][index].notIncluded">{{item}}</li>
+            <li *ngFor="let item of ticket.services[index].notIncluded">{{item}}</li>
           </ul>
         </div>
         <div>
           <h4>Ngày hoạt động:</h4>
           <ul>
-            <li>{{ticket.services[0][index].dayActive}}</li>
+            <li>{{ticket.services[index].dayActive}}</li>
           </ul>
         </div>
         <div>
           <h4>Giờ mở cửa:</h4>
           <ul>
-            <li>{{ticket.services[0][index].timeStart + ' AM - ' + ticket.services[0][index].timeStop + ' PM'}}</li>
+            <li>{{ticket.services[index].timeStart + ' AM - ' + ticket.services[index].timeStop + ' PM'}}</li>
           </ul>
         </div>
         <div>
