--- a/src/app/tickets/ticket-detail/ticket-detail.component.html
+++ b/src/app/tickets/ticket-detail/ticket-detail.component.html
@@ -66,7 +66,7 @@
             <tr>
               <td style="width: 50%;">{{item.itemServiceName}}</td>
               <td style="width: 10%; padding-right: 0.5rem;">
-                {{item.itemServicePrice.toLocaleString('en-us', {minimumFractionDigits: 0})}}đ</td>
+                {{item.itemServicePrice}}đ</td>
               <td>
                 <button
                 mat-raised-button
