--- a/src/app/tickets/tickets-all/tickets-all.component.css
+++ b/src/app/tickets/tickets-all/tickets-all.component.css
@@ -1,9 +1,12 @@
 .item-ticket{
   display: flex;
   flex-wrap: wrap;
+  flex-grow: 4;
+  /* align-items: center; */
+  justify-content: center;
 }
 .item-ticket > .item {
-  width: 270px;
+  width: 250px;
   margin: 1rem;
   cursor: pointer;
 }
@@ -45,5 +48,32 @@ ul {
 
 .list_ticket {
   margin: 1rem;
-  flex: 70%;
+  flex: 90%;
+
+}
+.image-section {
+  width: 100%;
+  height: 350px;
+  background-position: 29% 49%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 20px;
+}
+.overlay {
+  width: 100%;
+  height: 350px;
+  border-radius: 20px;
+  top: 0;
+  position: absolute;
+  background: center,linear-gradient(rgba(51, 30, 78, 0.418), rgba(109, 112, 160, 0.3));
+}
+
+.nameCity {
+  color: white;
+  font-size: 57px;
+  font-weight: bolder;
+  position: absolute;
+  top: 41%;
+  right: 43%;
+  text-transform: uppercase;
 }
