--- a/src/app/tickets/tickets-all/tickets-all.component.html
+++ b/src/app/tickets/tickets-all/tickets-all.component.html
@@ -1,3 +1,12 @@
+<div style="position: relative;">
+  <div class="image-section" style="background-image: url({{imageCity}});">
+  </div>
+  <div class="overlay"></div>
+  <div class="nameCity">{{nameCity}}</div>
+  
+</div>
+
+
 
 <section class="category_filter">
   <mat-card class="category">
