--- a/src/app/menu/header/header.component.html
+++ b/src/app/menu/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="example-container">
 <mat-toolbar class="example-toolbar">
 
-  <div routerLink="/home" style="display: flex; align-items: center;">
+  <div routerLink="/home" style="display: flex; align-items: center; padding-left: 9rem;">
     <img src="../../../assets/icon/brand.svg" style="width: 35px; height: 35px;">
     <div style="padding-left: 0.5rem;">
       <h1 class="logo_detail" style="color: rgb(153, 44, 255);">
@@ -11,8 +11,8 @@
     </div>
   </div>
   <span class="spacer"></span>
-  <ul>
 
+  <ul style="padding-right: 10rem;">
     <li>
       <button
         mat-button
