--- a/src/app/tickets/tickets-all/tickets-all.component.html
+++ b/src/app/tickets/tickets-all/tickets-all.component.html
@@ -1,16 +1,15 @@
-<div style="position: relative;">
-  <div class="image-section" style="background-image: url({{imageCity}});">
-  </div>
-  <div class="overlay"></div>
-  <div class="nameCity">{{nameCity}}</div>
-  
-</div>
+
 
 
 
 <section class="category_filter">
   <mat-card class="category">
-    <mat-card-title>Danh mục</mat-card-title>
+    <div style="position: relative;">
+      <div class="image-section" style="background-image: url({{imageCity}});">
+      </div>
+      <div class="overlay"></div>
+      <div class="nameCity">{{nameCity}}</div>
+    </div>
     <ul>
         <li>
             <mat-checkbox (change) = "checkAll()" [checked] = 'ischeckAll'>Tất cả</mat-checkbox>
@@ -20,7 +19,9 @@
         </li>
     </ul>
   </mat-card>
-  <mat-card class="list_ticket" >
+
+
+  <div class="list_ticket" >
     <div class="item-ticket">
       <mat-card
         class="item"
@@ -28,20 +29,44 @@
         (click) = "detailTicket(item.id)"
         >
         <img *ngIf="item.imagePath !== null" mat-card-image src= {{item.imagePath[0]}} alt= {{item.title}}>
-        <mat-card-title>{{item.title}}</mat-card-title>
+        <mat-card-title class="title-ticket">{{item.title}}</mat-card-title>
         <mat-card-subtitle>{{item.category}}</mat-card-subtitle>
-        <mat-card-content>
-          <p class="content">{{item.content}}</p>
+        <mat-card-content style="
+          position: absolute;
+          bottom: 0;
+          padding-bottom: 1rem;
+          padding-top: 1rem;
+          text-align: center;">Chỉ từ
+          <span
+            style="color: orangered;
+              font-weight: bolder;
+              font-size: 20px;">
+            {{item.price_reduce.toLocaleString('en-us', {minimumFractionDigits: 0})}}đ</span>
+          <span
+            *ngIf="item.percent !== 0"
+            style="padding-left: 1rem;
+            text-decoration: line-through;
+            color: #a7a7a7;">{{item.price.toLocaleString('en-us', {minimumFractionDigits: 0})}}đ</span>
         </mat-card-content>
+        <div class="percent" *ngIf="item.percent !== 0">
+          <span class="percent-item">{{item.percent}}%</span>
+        </div>
+        <!-- <mat-card-content>
+          <p class="content">{{item.content}}</p>
+        </mat-card-content> -->
       </mat-card>
-    </div>
-    <mat-paginator
+      <mat-paginator
+      style="background-color: #e9e6ef;
+      font-size: 18px;
+      font-weight: 600;"
       (page)="onPageChange($event)"
       [length]="100"
       [pageSize]="5"
       [pageSizeOptions]="[5, 10, 25, 100]">
-    </mat-paginator>
-  </mat-card>
+      </mat-paginator>
+    </div>
+    
+  </div>
 
 </section>
 
