--- a/src/app/menu/header/header.component.html
+++ b/src/app/menu/header/header.component.html
@@ -55,7 +55,7 @@
           mat-button
           [matMenuTriggerFor]="menu"
           routerLinkActive="mat-accent">
-          <span>{{username}}</span>
+          <span style="font-weight: bolder;">{{username}}</span>
         </button>
         <div mat-card-avatar style="margin: 0 1rem; position: absolute; text-align: center; display: flex; justify-content: center;">
           <div class="img_avt">
