--- a/src/app/tickets/ticket-detail-update/ticket-detail-update.component.html
+++ b/src/app/tickets/ticket-detail-update/ticket-detail-update.component.html
@@ -1,101 +1,110 @@
-<mat-card  *ngIf="ticket">
-  <div style="width: 100%; height: auto; text-align:center;margin:0; padding:0;">
-    <ng-image-slider #nav
-      [images]="imageObject"
-      [infinite]="false"
-      [autoSlide]="imageObject.length"
-      [imageSize]="{width: '100%', height: 450}"
-      slideImage="1"></ng-image-slider>
-  </div>
+<div *ngIf="ticket" class="detail-ticket" style = "width:80%; margin: 0 auto;">
+  <mat-card style="border-radius: 30px;">
+    <!-- image slide -->
+    <div style="width: 100%; height: auto; text-align:center; margin:0; padding:0; border-radius: 20px;">
+      <ng-image-slider #nav
+        [images]="imageObject"
+        [infinite]="false"
+        [autoSlide]="imageObject.length"
+        [imageSize]="{width: '100%', height: 450}"
+        slideImage="1"></ng-image-slider>
+    </div>
 
-  <div class="detail">
-    <p>{{ticket.city + " > " + ticket.category + " > " + ticket.categoryService}}</p>
-  </div>
+    <!-- title ticket -->
+    <div class="title-ticket">
+      <h1>{{ticket.title || ''}}</h1>
+      <h3>{{ticket.city}}</h3>
+      <div class="list-category-item">
+        <span><img src="../../../assets/icon/location.svg" style="width: 30px; height: 30px;"></span>
+        <span class="list-category-item-name">{{ticket.category + " > " + ticket.categoryService}}</span>
+      </div>
+    </div>
 
-  <div class="title_ticket">
-    <h1>{{ticket.title || ''}}</h1>
-    <mat-divider></mat-divider>
-
-    <div style="display: flex; flex-wrap: wrap;">
+    <!-- mat-chip -->
+    <div style="display: flex; flex-wrap: wrap; padding: 0.5rem 0; justify-content: center;">
       <mat-chip class="icon_condition">
         <img src = "../../../assets/icon/dollar.svg" width="20px" height="20px">
-        Không hoàn huỷ/Hoàn huỷ miễn phí trong 24h
+        <span>Không hoàn huỷ/Hoàn huỷ miễn phí trong 24h</span>
       </mat-chip>
       <mat-chip class="icon_condition">
         <img src = "../../../assets/icon/day.svg" width="20px" height="20px">
-        Vé theo ngày cố định
+        <span>Vé theo ngày cố định</span>
       </mat-chip>
       <mat-chip class="icon_condition">
         <img src = "../../../assets/icon/printer.svg" width="20px" height="20px">
-        Xuất trình vé điện tử hoặc in voucher
+        <span>Xuất trình vé điện tử hoặc in voucher</span>
       </mat-chip>
       <mat-chip class="icon_condition">
         <img src = "../../../assets/icon/coupon.svg" width="20px" height="20px">
-        Vào cổng bằng voucher/Đổi vé cứng
+        <span>Vào cổng bằng voucher/ Đổi vé cứng</span>
       </mat-chip>
       <mat-chip class="icon_condition">
         <img src = "../../../assets/icon/car.svg" width="20px" height="20px">
-        Đón tại điểm hẹn
+        <span>Đón tại điểm hẹn</span>
       </mat-chip>
     </div>
-  </div>
 
-  <mat-divider></mat-divider>
+    <!-- content -->
+    <div class="content_ticket">
+      <p>{{ticket.content}}</p>
+    </div>
 
-  <div class="content_ticket">
-    <p>{{ticket.content}}</p>
-  </div>
+    <!-- services -->
+    <div style="display: flex;">
+      <div class="services-item">
+        <h3>Các gói dịch vụ</h3>
+        <p>Vui lòng chọn các gói dịch vụ</p>
 
-  <div class="service_container">
-    <mat-card class="description">
-      <h3>Các gói dịch vụ</h3>
-      <p>Vui lòng chọn các gói dịch vụ</p>
-      <div class="service_item">
-        <button
-          mat-stroked-button
-          *ngFor="let item of ticket.services; index as i"
-          (click) = "showInfoService(i)">
-            {{item.name}}
-        </button>
-      </div>
+        <div class="service_item">
+          <button
+            class="button_select"
+            mat-stroked-button
+            *ngFor="let item of ticket.services; index as i"
+            [ngClass]="checkColorService[i] ? 'button_select_color' : 'service_item'"
+            (click) = "showInfoService(i)"
+            style="margin: 5px;">
+             {{item.name}} </button>
+        </div>
 
-      <div>
-        <form [formGroup]="form">
-          <p>Số lượng</p>
-          <mat-card *ngFor="let item of listItemService; index as i">
-            <tr>
-              <td style="width: 50%;">{{item.itemServiceName}}</td>
-              <td style="width: 10%; padding-right: 0.5rem;">
-                {{item.itemServicePrice.toLocaleString('en-us', {minimumFractionDigits: 0})}}đ</td>
-              <td>
-                <button
-                mat-raised-button
-                (click)="item.quantity=item.quantity+1"><mat-icon>add</mat-icon></button>
-              </td>
-              <td>
-                  <input
-                    style="text-align: center;
-                    width: 40px;
-                    font-weight: bolder;"
-                    formControlName = "quantity"
-                    matInput
-                    #incrementInput
-                    type="number"
-                    min="0"
-                    [value]="item.quantity"
-                    placeholder={{item.quantity}}>
-              </td>
-              <td>
-                <button
+        <div>
+          <form [formGroup]="form">
+            <h3 style="padding-top: 2rem;">Số lượng</h3>
+            <mat-card *ngFor="let item of listItemService; index as i" class="item-select">
+              <tr>
+                <td style="width: 50%;">{{item.itemServiceName}}</td>
+                <td style="width: 10%; padding-right: 0.5rem;font-weight: bolder;">
+                  {{formatPrice(item.itemServicePrice)}}đ</td>
+                <td>
+                  <button
                   mat-raised-button
-                  (click)="item.quantity=item.quantity-1"><mat-icon>remove</mat-icon>
-                </button>
-              </td>
-            </tr>
-          </mat-card>
-
+                  (click)="item.quantity=item.quantity+1"><mat-icon>add</mat-icon></button>
+                </td>
+                <td>
+                    <input
+                      style="text-align: center;
+                      width: 40px;
+                      font-weight: bolder;"
+                      formControlName = "quantity"
+                      matInput
+                      #incrementInput
+                      type="number"
+                      min=0
+                      [(value)]="item.quantity"
+                      placeholder={{item.quantity}}>
+                </td>
+                <td>
+                  <button
+                  *ngIf="item.quantity > 0"
+                    mat-raised-button
+                    (click)="item.quantity=item.quantity-1"><mat-icon>remove</mat-icon>
+                  </button>
+                </td>
+              </tr>
+            </mat-card>
             <div class="selectDate">
-              <mat-form-field appearance="fill">
+              <h3 style="padding-top: 2rem;">Lựa chọn khoảng thời gian sử dụng vé:</h3>
+
+              <mat-form-field appearance="outline">
                 <mat-label>Nhập ngày</mat-label>
                 <mat-date-range-input [rangePicker]="picker">
                   <input matStartDate placeholder="Start date" formControlName = "dateStart">
@@ -107,30 +116,14 @@
             </div>
 
             <div class="btn-action">
-              <button mat-raised-button color="primary" (click) = "AddCart()">Thêm vào giỏ hàng</button>
-              <button mat-raised-button color="warn">Đặt ngay</button>
+              <button class="btn-add-cart" mat-stroked-button color="primary" (click) = "AddCart()">Thêm vào giỏ hàng</button>
+              <!-- <button mat-raised-button color="warn" style="margin-left: 1rem;">Đặt ngay</button> -->
             </div>
           </form>
 
         </div>
-      </mat-card>
+      </div>
       <mat-card class="description">
-        <h3>Chi tiết gói đã chọn</h3>
-        <div class="Info-general">
-          <div class="icon_condition">
-            <img src = "../../../assets/icon/dollar.svg" width="20px" height="20px">
-            Không hoàn huỷ/Hoàn huỷ miễn phí trong 24h
-          </div>
-          <div class="icon_condition">
-            <img src = "../../../assets/icon/day.svg" width="20px" height="20px">
-            Vé theo ngày cố định
-          </div>
-          <div class="icon_condition">
-            <img src = "../../../assets/icon/printer.svg" width="20px" height="20px">
-            Xuất trình vé điện tử hoặc in voucher
-          </div>
-        </div>
-        <mat-divider></mat-divider>
         <div class="Info-service">
           <h3>Thông tin sản phẩm</h3>
           <div>
@@ -165,8 +158,7 @@
           </div>
         </div>
       </mat-card>
-
-
     </div>
 
-</mat-card>
+  </mat-card>
+</div>
