--- a/src/app/tickets/ticket-detail/ticket-detail.component.css
+++ b/src/app/tickets/ticket-detail/ticket-detail.component.css
@@ -1,57 +1,8 @@
-/* .icon_condition {
-  padding: 0.5rem 2rem;
-  border-radius: 5rem;
-  background-color: rgb(255, 240, 246);
-  margin: 0.5rem;
-}
-
-.content_ticket{
-  word-wrap: break-word;
-}
-.service_container{
-  display: flex;
-}
-.description{
-  flex: 50%;
-  padding: 1rem 2rem;
-  border: 1px solid #f1f1f1;
-  margin: 1rem 1rem;
-}
-
-.service_price{
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  background-color: antiquewhite;
-  border: 1px solid purple;
-  margin: 1rem auto;
-  padding: 0.5rem 1rem;
-}
-
-input[type="number"] {
-  width: 50px;
-  height: 30px;
-}
-
-.button_select:focus {
-  color: purple;
-  background-color: rgba(248, 218, 248, 0.849);
-}
-
-.mat-card {
-  margin: 1rem;
-  padding: 0 0 1rem 0;
-}
- .ng-image-slider > image  {
-  border-radius: 20px;
- } */
-
-
 
  /* ticket */
 
  .detail-ticket {
-  width:80%; 
+  width:80%;
   margin: 0 auto;
  }
 
@@ -74,4 +25,66 @@ input[type="number"] {
   padding-left: 0.7rem;
   font-weight: bolder;
   color: #7878b3;
+}
+
+.icon_condition {
+  display: flex;
+  padding: 0.5rem 2rem;
+  border-radius: 5rem;
+  background-color: rgb(255 255 255);
+  margin: 0.5rem;
+  border: 1px solid #9dd4d4;
+}
+
+.icon_condition > span {
+  padding-left: 0.5rem;
+}
+
+.services-item {
+  flex: 50%;
+}
+.services-des {
+  flex: 50%;
+  background-color: azure;
+  border-radius: 20px;
+}
+
+.item-select {
+  margin: 1.5rem 1.5rem 1.5rem 0;
+}
+
+.button_select_color {
+  border: 1px solid #0027ff;
+  color: #0027ff;
+  font-weight: 800;
+}
+
+.selectDate {
+  width: 100%;
+}
+.description {
+  flex: 30%;
+}
+td {
+  width: 5%;
+}
+
+.btn-add-cart {
+  background-color: #ff4171;
+  color: white;
+  font-weight: bolder;
+  border-radius: 40px;
+  font-size: 20px;
+  width: 56%;
+  height: 57px;
+}
+.btn-add-cart:hover {
+  background-color: #ff295e;
+  width: 54%;
+  height: 54px;
+}
+
+.btn-action {
+  display: flex;
+  justify-content: center;
 }
